# Cache

./: README.md  check_tests.py  check_tests_lfu.py  check_tests_lru.py  check_tests_perfect.py  run_tests.sh  run_tests_lfu.sh  run_tests_lru.sh  run_tests_perfect.sh
implementation/: CMakeLists.txt  Makefile  cache
implementation/include/: cache.hpp  lfu.hpp  lru.hpp  perfect.hpp  slow_get_page.hpp
implementation/src/: CMakeLists.txt  lfu.cpp  lru.cpp  main.cpp  perfect.cpp  slow_get_page.cpp
